--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <input type="radio" value="female" name="Gender" id="102">female
     </label>
     <br>
-    <b>BRANCH</b>
+    <b>BRANCHs</b>
     <br><br>
     <label for="CSE">
        <input type="checkbox" value="CSE" name="branch" id="101"><b>CSE</b>
